# LiteGL

./: .gitignore  CMakeLists.txt  README.md  config.h.in
docs/: 1_Begin.md
docs/russian/: 1_begin.md  2_draw_triangle.md  README.md
include/LiteGL/: LiteGL.hpp  default.hpp  logger.hpp  time.hpp  types.hpp
include/LiteGL/assets/: mb.hpp  sb.hpp  scrbuffer.hpp  tb.hpp
include/LiteGL/audio/: soundplayer.hpp
include/LiteGL/buffer/: buffers.hpp  sb.hpp  scrbuffer.hpp  tb.hpp
include/LiteGL/collision/: collisionsurface.hpp  hitbox.hpp  ray.hpp
include/LiteGL/glctrl/: glctrl.hpp
include/LiteGL/graphics/: camera.hpp  font.hpp  graphics.hpp  mesh.hpp  model.hpp  renderctl.hpp  shader.hpp  shaderconstructor.hpp  texture.hpp  vertexarray.hpp
include/LiteGL/screen/: screenitems.hpp  screenmgr.hpp
include/LiteGL/system/: arguments.hpp  default.hpp  iniloader.hpp  logger.hpp  time.hpp  types.hpp  universal.hpp
include/LiteGL/window/: window.hpp
notes/: LiteGL Component.md  LiteGL.base  Задачи.md  схемы.canvas
src/: LiteDATA.cpp  LiteData.hpp  LiteGL.cpp  default.cpp  logger.cpp  pointer.hpp  priv_default.hpp  privtypes.hpp  time.cpp  types.cpp
src/assets/: buffer.cpp
src/buffer/: buffer.cpp  buffer.hpp
src/gameldr/: gameldr.cpp  gameldr.hpp
src/glctrl/: glctrl.cpp
src/graphics/: camera.cpp  font.cpp  fontloader.cpp  fontloader.hpp  graphics_tools.cpp  graphics_tools.hpp  mesh.cpp  model.cpp  renderctl.cpp  shader.cpp  shaderconstructor.cpp  texture.cpp  vertexarray.cpp
src/priv/: cache.hpp  cmdinfo.hpp
src/screen/: screen_shaders.hpp  screenmgr.cpp  shaders.hpp
src/system/: arguments.cpp  cache.cpp  default.cpp  dllobject.cpp  dllobject.hpp  iniloader.cpp  logger.cpp  priv_arguements.hpp  priv_cache.hpp  priv_default.hpp  priv_logger.hpp  privtypes.hpp  signals.hpp  time.cpp  types.cpp
src/window/: exception.cpp  exception.hpp  window.cpp  window.hpp
test game/: CMakeLists.txt  testgame.cpp
